// Copyright (c) 2020-2021 The Open-Transactions developers
// This Source Code Form is subject to the terms of the Mozilla Public
// License, v. 2.0. If a copy of the MPL was not distributed with this
// file, You can obtain one at http://mozilla.org/MPL/2.0/.

syntax = "proto2";

package opentxs.proto;
option java_package = "org.opentransactions.proto";
option java_outer_classname = "OTPaymentEvent";
option optimize_for = LITE_RUNTIME;

import public "PaymentWorkflowEnums.proto";

message PaymentEvent {
    optional uint32 version = 1;
    optional PaymentEventType type = 2;
    repeated string item = 3;
    optional int64 time = 4;
    optional EventTransportMethod method = 5;
    optional string transport = 6;
    optional string nym = 7;
    optional bool success = 8;
    optional string memo = 9;
}
